fix: remove scrollbars when printing Income vs Expense. (#2255)

--- a/src/extension/features/general/printing-improvements/index.css
+++ b/src/extension/features/general/printing-improvements/index.css
@@ -238,3 +238,11 @@
 	}
 
 }
+
+/* ======== Toolkit Reports -> Income vs Expense	Printing Improvements ======== */
+@media print {
+	/* Hide Scrollbars when printing income vs expense reports. */
+	.tk-overflow-scroll::-webkit-scrollbar {
+		display: none;
+	}
+}
